fixed overlapping of columns

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,4 +1,7 @@
 /* Custom Container */
+#user-posts {
+  overflow: hidden;
+}
 @media (max-width: 768px) {
   .container {
     margin: 0
